add error alert

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Sistem Rekomendasi Stroke {% endblock %} 
+{% block title %} Sistem Rekomendasi Thrombolysis {% endblock %} 
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} sidebar-mini layout-fixed {% endblock body_class %} 
