--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -81,7 +81,7 @@
         <div class="col-lg-6 col-7">
           <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-              <li class="breadcrumb-item"><a href="#">Sistem Rekomendasi Thrombolysis Pada Pasien Stroke</a></li>
+              <li class="breadcrumb-item"><a href="#">thromboCT</a></li>
               <li class="breadcrumb-item"><a href="#">Versi Model: 1.0.0</a></li>
             </ol>
           </nav>
