--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -3,8 +3,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Navbar links -->
       <div class="navbar-header">
-        <h1>Fakultas Kedokteran, Universitas Indonesia</h1>
-        <a href="https://fk.ui.ac.id/reyhan-eddy-yunus.html" target="_blank">dr. Reyhan Eddy Yunus, Sp.Rad, M.Sc</a>
+        <img src="/static/assets/img/brand/rscm.png" alt="RSCM" style="height: 100px;">
+        <img src="/static/assets/img/brand/fkui2.png" alt="FKUI" style="height: 100px;">
+        <br><br>
+        {% comment %} <h1>Fakultas Kedokteran, Universitas Indonesia</h1> {% endcomment %}
+        <a href="https://fk.ui.ac.id/reyhan-eddy-yunus.html" target="_blank">Dr. dr. Reyhan Eddy Yunus, Sp.Rad., Subsp.NKL(K),M.Sc.</a>
       </div>
     </div>
   </div>
