--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
   <title>
-    {% block title %} Rekomendasi Stroke {% endblock %}
+    {% block title %} thromboCT {% endblock %}
   </title>
 
   <!-- Favicon - loaded as static -->
